Feat: Interactive UI Material Color

--- a/Assets/Scripts/UI/UI.asmdef
+++ b/Assets/Scripts/UI/UI.asmdef
@@ -9,7 +9,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:2908677d024741d6a8c615ab97c1bcb7",
         "GUID:7cd12a3219369714ea201514a8f940f4",
-        "GUID:022df4162a47ced46b62a43fd8f2f8a3"
+        "GUID:022df4162a47ced46b62a43fd8f2f8a3",
+        "GUID:c2648fd0807bf774a92c8200c7beba0a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
